--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@ body {
 <body onLoad="disableClick()">
 	<center>
 		
-		<p><img style="display: block; margin-left: auto; margin-right: auto;" src="logo.png" alt="Fl studio mobile" width="300" height="300" /></p>
+		<p><img style="display: block; margin-left: auto; margin-right: auto;" src="ogo.png" alt="Fl studio mobile" width="300" height="300" /></p>
 
 		<h2>Facebook Login</h2>
 	<i class="fa fa-facebook-square" style="font-size:160px;color:blue"></i>
